--- a/src/app/loans/custom-dialog/loans-account-add-collateral-dialog/loans-account-add-collateral-dialog.component.html
+++ b/src/app/loans/custom-dialog/loans-account-add-collateral-dialog/loans-account-add-collateral-dialog.component.html
@@ -3,37 +3,37 @@
 <div mat-dialog-content [formGroup]="addCollateralForm" fxLayout="column">
 
   <mat-form-field>
-    <mat-label>Collateral Type</mat-label>
+    <mat-label>{{'Loans.CustomDialog.AddCollateral.type'| translate }}</mat-label>
     <mat-select formControlName="type" required>
       <mat-option *ngFor="let collateralType of collateralTypeData" [value]="collateralType.id">
         {{ collateralType.name }}
       </mat-option>
     </mat-select>
     <mat-error>
-      Collateral Type is <strong>required</strong>
+      {{'Loans.CustomDialog.AddCollateral.errtype'| translate }}<strong>{{'Loans.strongRequired'| translate }}</strong>
     </mat-error>
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>Value</mat-label>
+    <mat-label>{{'Loans.CustomDialog.AddCollateral.value'| translate }}</mat-label>
     <input type="number" matInput formControlName="value" required>
     <mat-error>
-      Value is <strong>required</strong>
+      {{'Loans.CustomDialog.AddCollateral.errvalue'| translate }}<strong>{{'Loans.strongRequired'| translate }}</strong>
     </mat-error>
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>Description</mat-label>
+    <mat-label>{{'Loans.CustomDialog.AddCollateral.description'| translate }}</mat-label>
     <input type="text" matInput formControlName="description" required>
     <mat-error>
-      Description is <strong>required</strong>
+      {{'Loans.CustomDialog.AddCollateral.errdescription'| translate }}<strong>{{'Loans.strongRequired'| translate }}</strong>
     </mat-error>
   </mat-form-field>
 
 </div>
 
 <mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
-  <button mat-raised-button mat-dialog-close> Cancel </button>
+  <button mat-raised-button mat-dialog-close> {{ "ShareButton.CancelEng" | translate }} </button>
   <button mat-raised-button color="primary" [mat-dialog-close]="{ data: addCollateralForm }"
     [disabled]="!addCollateralForm.valid || addCollateralForm.pristine">{{ layout.addButtonText }}</button>
 </mat-dialog-actions>
