--- a/src/app/loans/custom-dialog/loans-account-view-guarantor-details-dialog/loans-account-view-guarantor-details-dialog.component.html
+++ b/src/app/loans/custom-dialog/loans-account-view-guarantor-details-dialog/loans-account-view-guarantor-details-dialog.component.html
@@ -1,37 +1,37 @@
-<h1 mat-dialog-title>Guarantor Detail</h1>
+<h1 mat-dialog-title>{{'Loans.CustomDialog.ViewGuarantor.GuarantorDetail'| translate }}</h1>
 
 <div mat-dialog-content fxLayout="column">
 
   <div fxLayout="row wrap" fxLayout.lt-md="column">
 
     <div fxFlexFill>
-      <span fxFlex="50%">First Name:</span>
+      <span fxFlex="50%">{{'Loans.CustomDialog.ViewGuarantor.firstname'| translate }}</span>
       <span fxFlex="50%">{{ data.guarantorData.firstname }}</span>
     </div>
 
     <div fxFlexFill>
-      <span fxFlex="50%">Last Name:</span>
+      <span fxFlex="50%">{{'Loans.CustomDialog.ViewGuarantor.lastname'| translate }}</span>
       <span fxFlex="50%">{{ data.guarantorData.lastname }}</span>
     </div>
 
     <div fxFlexFill>
-      <span fxFlex="50%">Relationship:</span>
+      <span fxFlex="50%">{{'Loans.CustomDialog.ViewGuarantor.name'| translate }}</span>
       <span fxFlex="50%">{{ data.guarantorData.clientRelationshipType.name }}</span>
     </div>
 
     <div fxFlexFill>
-      <span fxFlex="50%">Guarantor Type:</span>
+      <span fxFlex="50%">{{'Loans.CustomDialog.ViewGuarantor.guarantorType'| translate }}</span>
       <span fxFlex="50%">{{ data.guarantorData.guarantorType.value }}</span>
     </div>
 
     <div fxFlexFill>
-      <span fxFlex="50%">Status:</span>
+      <span fxFlex="50%">{{'Loans.CustomDialog.ViewGuarantor.status'| translate }}</span>
       <span fxFlex="50%">
         <span *ngIf="data.guarantorData.status">
-          Active
+          {{'Loans.CustomDialog.ViewGuarantor.Active'| translate }}
         </span>
         <span *ngIf="!data.guarantorData.status">
-          Deleted
+          {{'Loans.CustomDialog.ViewGuarantor.Deleted'| translate }}
         </span></span>
     </div>
 
@@ -40,5 +40,5 @@
 </div>
 
 <mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
-  <button mat-raised-button mat-dialog-close> Cancel </button>
+  <button mat-raised-button mat-dialog-close> {{ "ShareButton.CancelEng" | translate }} </button>
 </mat-dialog-actions>
