--- a/src/app/loans/loans-view/loan-account-actions/loan-screen-reports/loan-screen-reports.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/loan-screen-reports/loan-screen-reports.component.html
@@ -9,14 +9,14 @@
                 <div>
 
                     <mat-form-field fxFlex>
-                        <mat-label>Loan Screen Reports</mat-label>
+                        <mat-label>{{'Loans.View.Actions.LoanScreenReport.templateId'| translate }}</mat-label>
                         <mat-select formControlName="templateId">
                             <mat-option *ngFor="let template of templatesData" [value]="template.id">
                                 {{ template.name }}
                             </mat-option>
                         </mat-select>
                         <mat-error *ngIf="loanScreenReportForm.controls.templateId.hasError('required')">
-                            Screen Report is <strong>required</strong>
+                          {{'Loans.View.Actions.LoanScreenReport.errtemplateId'| translate }}<strong>{{'Loans.strongRequired'| translate }}</strong>
                         </mat-error>
                     </mat-form-field>
 
@@ -25,9 +25,9 @@
             </mat-card-content>
 
             <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-                <button type="button" mat-raised-button [routerLink]="['../../general']">Cancel</button>
+                <button type="button" mat-raised-button [routerLink]="['../../general']">{{'Loans.View.Actions.LoanScreenReport.btnCancel'| translate }}</button>
                 <button mat-raised-button color="primary" [disabled]="!loanScreenReportForm.valid">
-                    <fa-icon icon="cogs" size="sm"></fa-icon>&nbsp;&nbsp;Generate Report
+                    <fa-icon icon="cogs" size="sm"></fa-icon>&nbsp;&nbsp;{{'Loans.View.Actions.LoanScreenReport.btnGenerateReport'| translate }}
                 </button>
             </mat-card-actions>
 
@@ -44,12 +44,12 @@
         <div fxLayoutAlign="end">
             <button mat-stroked-button color="primary" [disabled]="!template" (click)="print()">
                 <fa-icon icon="file"></fa-icon>&nbsp;&nbsp;
-                Print
+                {{'Loans.View.Actions.LoanScreenReport.btnPrint'| translate }}
             </button>
         </div>
 
         <div #screenReport class="screen-report">
-            <p>Please select a screen report.</p>
+            <p>{{'Loans.View.Actions.LoanScreenReport.p'| translate }}</p>
         </div>
 
     </mat-card>
