--- a/src/app/loans/loans-view/loan-collateral-tab/loan-collateral-tab.component.html
+++ b/src/app/loans/loans-view/loan-collateral-tab/loan-collateral-tab.component.html
@@ -3,17 +3,17 @@
   <table mat-table [dataSource]="loanDetails.collateral">
 
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.LoanCollateral.Type'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.type.name }} </td>
     </ng-container>
 
     <ng-container matColumnDef="value">
-      <th mat-header-cell *matHeaderCellDef> Value </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.LoanCollateral.Value'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.value }} </td>
     </ng-container>
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.LoanCollateral.Description'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.description }} </td>
     </ng-container>
 
