--- a/src/app/loans/loans-view/view-charge/view-charge.component.html
+++ b/src/app/loans/loans-view/view-charge/view-charge.component.html
@@ -2,11 +2,11 @@
   fxLayout="row" fxLayoutAlign="end" fxLayoutGap="2%" fxLayout.lt-md="column" class="container m-b-20">
     <button mat-raised-button color="accent" *midasHasPermission="'PAY_SAVINGSACCOUNTCHARGE'" (click)="payCharge()">
       <fa-icon icon="dollar-sign"></fa-icon>&nbsp;&nbsp;
-      Pay
+      {{'Loans.View.ViewCharge.btnPay'| translate }}
     </button>
     <button mat-raised-button color="primary" *midasHasPermission="'WAIVE_SAVINGSACCOUNTCHARGE'" (click)="waiveCharge()">
       <fa-icon icon="flag"></fa-icon>&nbsp;&nbsp;
-      Waive
+      {{'Loans.View.ViewCharge.btnWaive'| translate }}
     </button>
 </div>
 
@@ -14,11 +14,11 @@
   fxLayout="row" fxLayoutAlign="end" fxLayoutGap="2%" fxLayout.lt-md="column" class="container m-b-20">
     <button mat-raised-button color="primary" *midasHasPermission="'UPDATE_SAVINGSACCOUNTCHARGE'" (click)="editCharge()">
       <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-      Edit
+      {{'Loans.View.ViewCharge.btnEdit'| translate }}
     </button>
     <button mat-raised-button color="warn" *midasHasPermission="'DELETE_SAVINGSACCOUNTCHARGE'" (click)="deleteCharge()">
       <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
-      Delete
+      {{'Loans.View.ViewCharge.btnDelete'| translate }}
     </button>
 </div>
 
@@ -31,7 +31,7 @@
       <div fxLayout="row wrap" class="content">
 
         <div fxFlex="50%" class="mat-body-strong">
-          Name
+          {{'Loans.View.ViewCharge.Name'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -39,7 +39,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Charge Type
+          {{'Loans.View.ViewCharge.ChargeType'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -47,7 +47,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Currency
+          {{'Loans.View.ViewCharge.Currency'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -55,7 +55,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Payment due at
+          {{'Loans.View.ViewCharge.chargeTimeType'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -63,7 +63,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Payment due as of
+          {{'Loans.View.ViewCharge.dueDate'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -71,7 +71,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Calculation Type
+          {{'Loans.View.ViewCharge.chargeCalculationType'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -79,7 +79,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Due
+          {{'Loans.View.ViewCharge.Due'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -87,7 +87,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Paid
+          {{'Loans.View.ViewCharge.Paid'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -95,7 +95,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Waived
+          {{'Loans.View.ViewCharge.Waived'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -103,7 +103,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Outstanding
+          {{'Loans.View.ViewCharge.Outstanding'| translate }}
         </div>
 
         <div fxFlex="50%">
