--- a/src/app/loans/loans-account-stepper/loans-account-charges-step/loans-account-charges-step.component.html
+++ b/src/app/loans/loans-account-stepper/loans-account-charges-step/loans-account-charges-step.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Charge</mat-label>
+    <mat-label>{{'Loans.Stepper.Charges.Charge'| translate }}</mat-label>
     <mat-select #charge>
       <mat-option *ngFor="let charge of chargeData" [value]="charge">
         {{ charge.name }}
@@ -12,7 +12,7 @@
   <div fxFlex="48%" fxFlexAlign="center">
     <button type="button" mat-raised-button color="primary" (click)="addCharge(charge)" [disabled]="!charge.value">
       <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-      Add
+      {{'Loans.Stepper.Charges.btnAdd'| translate }}
     </button>
   </div>
 
@@ -20,21 +20,21 @@
     [hidden]="chargesDataSource.length === 0">
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCharges.name'| translate }} </th>
       <td mat-cell *matCellDef="let charge">
         {{ charge.name + ', ' + charge.currency.displaySymbol }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="chargeCalculationType">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCharges.chargeCalculationType'| translate }} </th>
       <td mat-cell *matCellDef="let charge">
         {{ charge.chargeCalculationType.value }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef> Amount </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCharges.amount'| translate }} </th>
       <td mat-cell *matCellDef="let charge">
         {{ charge.amount | money }}
         <button mat-icon-button color="primary" (click)="editChargeAmount(charge)">
@@ -44,14 +44,14 @@
     </ng-container>
 
     <ng-container matColumnDef="chargeTimeType">
-      <th mat-header-cell *matHeaderCellDef> Collected On </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCharges.chargeTimeType'| translate }} </th>
       <td mat-cell *matCellDef="let charge">
         {{ charge.chargeTimeType.value }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCharges.date'| translate }} </th>
       <td mat-cell *matCellDef="let charge">
         <span
           *ngIf="charge.chargeTimeType.value === 'Specified due date' || charge.chargeTimeType.value === 'Weekly Fee'">
@@ -73,7 +73,7 @@
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCharges.action'| translate }} </th>
       <td mat-cell *matCellDef="let charge">
         <button mat-icon-button color="warn" (click)="deleteCharge(charge)">
           <fa-icon icon="trash"></fa-icon>
@@ -88,27 +88,27 @@
 
   <mat-divider fxFlex="98%"></mat-divider>
 
-  <h4 fxFlex="98%" class="mat-h4">Overdue Charges</h4>
+  <h4 fxFlex="98%" class="mat-h4">{{'Loans.Stepper.Charges.OverdueCharges'| translate }}</h4>
 
   <table mat-table class="mat-elevation-z1" [dataSource]="overDueChargesDataSource">
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableDueCharges.name'| translate }} </th>
       <td mat-cell *matCellDef="let charge"> {{ charge.name }},{{ charge.currency.displaySymbol }} </td>
     </ng-container>
 
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableDueCharges.type'| translate }} </th>
       <td mat-cell *matCellDef="let charge"> {{ charge.chargeCalculationType.value }} </td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef> Amount </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableDueCharges.amount'| translate }} </th>
       <td mat-cell *matCellDef="let charge"> {{ charge.amount| number }} </td>
     </ng-container>
 
     <ng-container matColumnDef="collectedon">
-      <th mat-header-cell *matHeaderCellDef> Collected On </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableDueCharges.collectedon'| translate }} </th>
       <td mat-cell *matCellDef="let charge"> {{ charge.chargeTimeType.value }} </td>
     </ng-container>
 
@@ -120,7 +120,7 @@
 
   <div fxFlex="50%">
     <div fxLayout="column" fxFlex="50%" class="tableName">
-      <h4 fxFlex="98%" class="mat-h4">Collaterals Data</h4>
+      <h4 fxFlex="98%" class="mat-h4">{{'Loans.Stepper.Charges.CollateralsData'| translate }}</h4>
     </div>
 
     <div fxLayout="column" fxFlex="50%">
@@ -135,22 +135,22 @@
   <table mat-table class="mat-elevation-z1" [dataSource]="collateralDataSource">
 
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCollateral.type'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.type.name }} </td>
     </ng-container>
 
     <ng-container matColumnDef="value">
-      <th mat-header-cell *matHeaderCellDef> Value </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCollateral.value'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.value }} </td>
     </ng-container>
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCollateral.description'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.description }} </td>
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Charges.tableCollateral.action'| translate }} </th>
       <td mat-cell *matCellDef="let ele; let collateralIndex = index">
         <button mat-icon-button color="warn" (click)="deleteCollateral(collateralIndex)">
           <fa-icon icon="trash"></fa-icon>
@@ -167,10 +167,10 @@
 <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
   <button mat-raised-button matStepperPrevious>
     <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-    Previous
+    {{ "ShareButton.PreviousEng" | translate }}
   </button>
   <button mat-raised-button matStepperNext [disabled]="!loansAccountFormValid">
-    Next&nbsp;&nbsp;
+    {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
     <fa-icon icon="arrow-right"></fa-icon>
   </button>
 </div>
