--- a/src/app/loans/loans-account-stepper/loans-account-preview-step/loans-account-preview-step.component.html
+++ b/src/app/loans/loans-account-stepper/loans-account-preview-step/loans-account-preview-step.component.html
@@ -1,68 +1,68 @@
 <div fxLayout="row wrap" fxLayout.lt-md="column">
 
-  <h3 class="mat-h3" fxFlexFill>Details</h3>
+  <h3 class="mat-h3" fxFlexFill>{{'Loans.Stepper.Preview.Details'| translate }}</h3>
 
   <mat-divider fxFlexFill></mat-divider>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Product:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.productId'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.productId | find:loansAccountTemplate.productOptions:'id':'name' }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.loanOfficerId">
-    <span fxFlex="40%">Loan officer:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.loanOfficerId'| translate }}</span>
     <span
       fxFlex="60%">{{ loansAccount.loanOfficerId | find:loansAccountProductTemplate.loanOfficerOptions:'id':'displayName'}}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.loanPurposeId">
-    <span fxFlex="40%">Loan purpose:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.loanPurposeId'| translate }}</span>
     <span
       fxFlex="60%">{{ loansAccount.loanPurposeId | find:loansAccountProductTemplate.loanPurposeOptions:'id':'name'}}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.fundId">
-    <span fxFlex="40%">Fund:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.fundId'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.fundId | find:loansAccountProductTemplate.fundOptions:'id':'name'}}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Submitted on:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.submittedOnDate'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.submittedOnDate | date }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Disbursement on:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.expectedDisbursementDate'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.expectedDisbursementDate | date }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.externalId">
-    <span fxFlex="40%">External id:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.Details'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.externalId }}</span>
   </div>
 
-  <h3 class="mat-h3" fxFlexFill>Terms</h3>
+  <h3 class="mat-h3" fxFlexFill>{{'Loans.Stepper.Preview.Terms'| translate }}</h3>
 
   <mat-divider fxFlexFill></mat-divider>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Principal:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.principal'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.principal }} {{loansAccountProductTemplate.currency.DisplaySymbol}}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Loan term:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.loanTermFrequency'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.loanTermFrequency }}
       {{loansAccount.loanTermFrequencyType | find: loansAccountProductTemplate.termFrequencyTypeOptions:'id':'name'}}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Number of repayments:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.numberOfRepayments'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.numberOfRepayments }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Repaid every:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.repaymentEvery'| translate }}</span>
     <span fxFlex="60%">{{loansAccount.repaymentEvery}}
       {{loansAccount.repaymentFrequencyType | find: loansAccountProductTemplate.termFrequencyTypeOptions:'id':'name'}}
       {{loansAccount.repaymentFrequencyNthDayType | find: loansAccountProductTemplate.repaymentFrequencyNthDayTypeOptions:'id': 'name'}}
@@ -70,96 +70,96 @@
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.repaymentsStartingFromDate">
-    <span fxFlex="40%">First repayment on:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.repaymentsStartingFromDate'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.repaymentsStartingFromDate | date }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.interestChargedFromDate">
-    <span fxFlex="40%">Interest charged from:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.interestChargedFromDate'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.interestChargedFromDate | date }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.interestRatePerPeriod">
-    <span fxFlex="40%">Nominal interest rate:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.interestRatePerPeriod'| translate }}</span>
     <span
       fxFlex="60%">{{loansAccount.interestRatePerPeriod}}&nbsp;&nbsp;{{loansAccountProductTemplate.interestRateFrequencyType.value}}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.interestType">
-    <span fxFlex="40%">Interest method: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.interestType'| translate }} </span>
     <span fxFlex="60%">{{loansAccount.interestType}}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.isEqualAmortization">
-    <span fxFlex="40%">Is Equal Amortization:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.isEqualAmortization'| translate }}</span>
     <span fxFlex="60%">{{loansAccount.isEqualAmortization}}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Amortization</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.amortizationType'| translate }}</span>
     <span
       fxFlex="60%">{{ loansAccount.amortizationType | find:loansAccountProductTemplate.amortizationTypeOptions:'id':'value' }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Interest calculation period: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.interestCalculationPeriodType'| translate }} </span>
     <span
       fxFlex="60%">{{ loansAccount.interestCalculationPeriodType | find:loansAccountProductTemplate.interestCalculationPeriodTypeOptions:'id':'value'  }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.allowPartialPeriodInterestCalcualtion">
-    <span fxFlex="40%">Calculate interest for exact days in partial period:</span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.allowPartialPeriodInterestCalcualtion'| translate }}</span>
     <span fxFlex="60%">{{ loansAccount.allowPartialPeriodInterestCalcualtion }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.inArrearsTolerance">
-    <span fxFlex="40%">Arrears tolerance: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.inArrearsTolerance'| translate }} </span>
     <span
       fxFlex="60%">{{loansAccount.inArrearsTolerance}}&nbsp;{{loansAccountProductTemplate.currency.displaySymbol}}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.graceOnInterestCharged">
-    <span fxFlex="40%">Interest free period: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.graceOnInterestCharged'| translate }} </span>
     <span fxFlex="60%">{{ loansAccount.graceOnInterestCharged }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Repayment strategy: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.transactionProcessingStrategyId'| translate }} </span>
     <span
       fxFlex="60%">{{ loansAccount.transactionProcessingStrategyId | find:loansAccountTemplate.transactionProcessingStrategyOptions:'id':'name' }}</span>
   </div>
 
-  <h3 class="mat-h3" fxFlexFill>Moratorium</h3>
+  <h3 class="mat-h3" fxFlexFill>{{'Loans.Stepper.Preview.Moratorium'| translate }}</h3>
 
   <mat-divider fxFlexFill></mat-divider>
 
   <div fxFlexFill *ngIf="loansAccount.graceOnPrincipalPayment">
-    <span fxFlex="40%">On principal payment: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.graceOnPrincipalPayment'| translate }} </span>
     <span fxFlex="60%">{{ loansAccount.graceOnPrincipalPayment }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.graceOnInterestPayment">
-    <span fxFlex="40%">On interest payment: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.graceOnInterestPayment'| translate }} </span>
     <span fxFlex="60%">{{ loansAccount.graceOnInterestPayment }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.graceOnArrearsAgeing">
-    <span fxFlex="40%">On Arrears Aging: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.graceOnArrearsAgeing'| translate }} </span>
     <span fxFlex="60%">{{ loansAccount.graceOnArrearsAgeing }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccount.isTopup">
-    <span fxFlex="40%">Is Topup Loan? </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.isTopup'| translate }} </span>
     <span fxFlex="60%">{{ loansAccount.isTopup }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Recalculate Interest: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.isInterestRecalculationEnabled'| translate }} </span>
     <span fxFlex="60%">{{ loansAccountProductTemplate?.isInterestRecalculationEnabled? 'Yes' : 'No' }}</span>
   </div>
 
   <div fxFlexFill *ngIf="loansAccountProductTemplate?.daysInMonthType">
-    <span fxFlex="40%">Days in month: </span>
+    <span fxFlex="40%">{{'Loans.Stepper.Preview.daysInMonthType'| translate }} </span>
     <span fxFlex="60%">{{ loansAccountProductTemplate?.daysInMonthType.value }}</span>
   </div>
 
@@ -172,35 +172,35 @@
     <table fxFlexFill class="mat-elevation-z1" mat-table [dataSource]="loansAccount.charges">
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Preview.name'| translate }} </th>
         <td mat-cell *matCellDef="let charge">
           {{ charge.name + ', ' + charge.currency.displaySymbol }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="chargeCalculationType">
-        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Preview.chargeCalculationType'| translate }} </th>
         <td mat-cell *matCellDef="let charge">
           {{ charge.chargeCalculationType.value }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef> Amount </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Preview.amount'| translate }} </th>
         <td mat-cell *matCellDef="let charge">
           {{ charge.amount | money }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="chargeTimeType">
-        <th mat-header-cell *matHeaderCellDef> Collected On </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Preview.chargeTimeType'| translate }} </th>
         <td mat-cell *matCellDef="let charge">
           {{ charge.chargeTimeType.value }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Preview.date'| translate }} </th>
         <td mat-cell *matCellDef="let charge">
           <span
             *ngIf="charge.chargeTimeType.value === 'Specified due date' || charge.chargeTimeType.value === 'Weekly Fee'">
@@ -226,29 +226,29 @@
 
   <div fxFlexFill *ngIf="loansAccountProductTemplate.overdueCharges.length" fxLayout="row wrap" fxLayout.lt-md="column">
 
-    <h3 fxFlex="98%" class="mat-h3">Overdue Charges</h3>
+    <h3 fxFlex="98%" class="mat-h3">{{'Loans.Stepper.Preview.OverdueCharges'| translate }}</h3>
 
     <mat-divider fxFlex="98%"></mat-divider>
 
     <table mat-table class="mat-elevation-z1" [dataSource]="loansAccountProductTemplate.overdueCharges">
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Preview.name2'| translate }} </th>
         <td mat-cell *matCellDef="let charge"> {{ charge.name }},{{ charge.currency.displaySymbol }} </td>
       </ng-container>
 
       <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Preview.type2'| translate }} </th>
         <td mat-cell *matCellDef="let charge"> {{ charge.chargeCalculationType.value }} </td>
       </ng-container>
 
       <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef> Amount </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Preview.amount2'| translate }} </th>
         <td mat-cell *matCellDef="let charge"> {{ charge.amount| number }} </td>
       </ng-container>
 
       <ng-container matColumnDef="collectedon">
-        <th mat-header-cell *matHeaderCellDef> Collected On </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.Stepper.Preview.collectedon'| translate }} </th>
         <td mat-cell *matCellDef="let charge"> {{ charge.chargeTimeType.value }} </td>
       </ng-container>
 
@@ -262,12 +262,12 @@
 <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
   <button mat-raised-button matStepperPrevious>
     <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-    Previous
+    {{ "ShareButton.PreviousEng" | translate }}
   </button>
   <button mat-raised-button [routerLink]="['../']">
-    Cancel
+    {{ "ShareButton.CancelEng" | translate }}
   </button>
   <button mat-raised-button color="primary" (click)="submit.emit()">
-    Submit
+    {{ "ShareButton.Submit" | translate }}
   </button>
 </div>
