--- a/src/app/loans/loans-view/datatable-tab/multi-row/multi-row.component.html
+++ b/src/app/loans/loans-view/datatable-tab/multi-row/multi-row.component.html
@@ -7,12 +7,12 @@
     <div class="action-button m-b-5" fxLayoutGap="10px">
       <span *midasHasPermission="'CREATE_' + datatableName">
         <button mat-raised-button color="primary" (click)="add()">
-          <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Add
+          <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ "ShareButton.AddEng" | translate }}
         </button>
       </span>
       <span *midasHasPermission="'DELETE_' + datatableName">
         <button class="delete-button" mat-raised-button color="warn" (click)="delete()" *ngIf="showDeleteBotton">
-          <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;Delete All
+          <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;{{ "ShareButton.DeleteAllEng" | translate }}
         </button>
       </span>
     </div>
