--- a/src/app/loans/loans-view/floating-interest-rates/floating-interest-rates.component.html
+++ b/src/app/loans/loans-view/floating-interest-rates/floating-interest-rates.component.html
@@ -3,12 +3,12 @@
   <table mat-table [dataSource]="interestRateData">
 
     <ng-container matColumnDef="fromDate">
-      <th mat-header-cell *matHeaderCellDef> From Date </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.FloatingInterestRate.fromDate'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.fromDate | date}} </td>
     </ng-container>
 
     <ng-container matColumnDef="interestRate">
-      <th mat-header-cell *matHeaderCellDef> Interest Rate </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.FloatingInterestRate.interestRate'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.effectiveInterestRate }} </td>
     </ng-container>
 
