--- a/src/app/loans/loans-view/general-tab/general-tab.component.html
+++ b/src/app/loans/loans-view/general-tab/general-tab.component.html
@@ -1,19 +1,19 @@
 <div class="tab-container mat-typography">
 
   <ng-container *ngIf="loanDetails.summary">
-    <h3>Performance History</h3>
+    <h3>{{'Loans.View.GeneralTab.PerformanceHistory'| translate }}</h3>
     <div fxLayout="row" fxLayoutGap="32px" class="performance-history-container">
       <p>
-        # of Repayments :{{loanDetails?.numberOfRepayments}}
+        {{'Loans.View.GeneralTab.numberOfRepayments'| translate }}{{loanDetails?.numberOfRepayments}}
       <p>
-        Maturity Date :{{loanDetails?.timeline.expectedMaturityDate | date}}
+        {{'Loans.View.GeneralTab.expectedMaturityDate'| translate }}{{loanDetails?.timeline.expectedMaturityDate | date}}
       </p>
     </div>
   </ng-container>
 
   <div *ngIf="loanDetails.summary">
 
-    <h3> Loan Summary </h3>
+    <h3> {{'Loans.View.GeneralTab.LoanSummary'| translate }} </h3>
 
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="Empty">
@@ -22,32 +22,32 @@
       </ng-container>
 
       <ng-container matColumnDef="Original">
-        <th mat-header-cell *matHeaderCellDef> Original </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.Original'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.original | number }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Paid">
-        <th mat-header-cell *matHeaderCellDef> Paid </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.Paid'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.paid | number }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Waived">
-        <th mat-header-cell *matHeaderCellDef> Waived </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.Waived'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.waived | number }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Written Off">
-        <th mat-header-cell *matHeaderCellDef> Written Off </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.WrittenOff'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.writtenOff | number }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Outstanding">
-        <th mat-header-cell *matHeaderCellDef> Outstanding </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.Outstanding'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.outstanding | number }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Over Due">
-        <th mat-header-cell *matHeaderCellDef> Over Due </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.OverDue'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.overdue | number }} </td>
       </ng-container>
 
@@ -59,29 +59,29 @@
 
   <div *ngIf="loanDetails.summary">
 
-    <h3> Loan Details</h3>
+    <h3> {{'Loans.View.GeneralTab.LoanDetails'| translate }}Loan Details</h3>
     <table mat-table [dataSource]="detailsDataSource">
 
       <ng-container matColumnDef="Key">
-        <th mat-header-cell *matHeaderCellDef> Key </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.Key'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.key }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Value">
-        <th mat-header-cell *matHeaderCellDef> Value </th>
-        <td mat-cell *matCellDef="let ele"> 
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.Value'| translate }} </th>
+        <td mat-cell *matCellDef="let ele">
           <ng-container *ngIf="ele.key === 'Disbursement Date'" >
             <span *ngIf="loanDetails.timeline.actualDisbursementDate"> {{loanDetails.timeline.actualDisbursementDate | date}} </span>
-            <span *ngIf="!loanDetails.timeline.actualDisbursementDate"> Not Available </span>
+            <span *ngIf="!loanDetails.timeline.actualDisbursementDate"> {{'Loans.View.GeneralTab.NotAvailable'| translate }} </span>
           </ng-container>
 
           <ng-container *ngIf="ele.key === 'Loan Purpose'">
             <span *ngIf="loanDetails.loanPurchaseName"> {{loanDetails.loanPurchaseName}} </span>
-            <span *ngIf="!loanDetails.loanPurchaseName"> Not Available </span>
+            <span *ngIf="!loanDetails.loanPurchaseName"> {{'Loans.View.GeneralTab.NotAvailable'| translate }} </span>
           </ng-container>
 
           <ng-container *ngIf="ele.key === 'Loan Officer'">
-            <span *ngIf="!loanDetails.loanOfficerName"> Unassigned </span>
+            <span *ngIf="!loanDetails.loanOfficerName"> {{'Loans.View.GeneralTab.Unassigned'| translate }} </span>
             <span *ngIf="loanDetails.loanOfficerName"> {{loanDetails.loanOfficerName}} &nbsp;
               <span *ngIf="loanDetails.loanOfficerName">
                     <!-- <a ng-click="clickEvent('unassignloanofficer', loanDetails.id)" *midasHasPermission = "'REMOVELOANOFFICER_LOAN'"><i
@@ -96,7 +96,7 @@
 
           <ng-container *ngIf="ele.key === 'External Id'">
             <span *ngIf="loanDetails.externalId"> {{loanDetails.externalId}} </span>
-            <span *ngIf="!loanDetails.externalId"> Not Available </span>
+            <span *ngIf="!loanDetails.externalId"> {{'Loans.View.GeneralTab.NotAvailable'| translate }} </span>
           </ng-container>
 
           <ng-container *ngIf="ele.key === 'Proposed Amount' || ele.key === 'Approved Amount' || ele.key === 'Disburse Amount'">
@@ -114,24 +114,24 @@
 
   <div *ngIf="!loanDetails.summary">
 
-    <h3> Loan Details </h3>
+    <h3> {{'Loans.View.GeneralTab.LoanDetails'| translate }} </h3>
     <table mat-table [dataSource]="detailsDataSource">
 
       <ng-container matColumnDef="Key">
-        <th mat-header-cell *matHeaderCellDef> Key </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.Key'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.key }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Value">
-        <th mat-header-cell *matHeaderCellDef> Value </th>
-        <td mat-cell *matCellDef="let ele"> 
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.GeneralTab.Value'| translate }} </th>
+        <td mat-cell *matCellDef="let ele">
           <ng-container *ngIf="ele.key === 'Disbursement Date'" >
             <span *ngIf="loanDetails.timeline.actualDisbursementDate"> {{loanDetails.timeline.actualDisbursementDate | date}} </span>
-            <span *ngIf="!loanDetails.timeline.actualDisbursementDate"> Not Available </span>
+            <span *ngIf="!loanDetails.timeline.actualDisbursementDate"> {{'Loans.View.GeneralTab.NotAvailable'| translate }} </span>
           </ng-container>
 
           <ng-container *ngIf="ele.key === 'Loan Officer'">
-            <span *ngIf="!loanDetails.loanOfficerName"> Unassigned </span>
+            <span *ngIf="!loanDetails.loanOfficerName"> {{'Loans.View.GeneralTab.Unassigned'| translate }} </span>
             <span *ngIf="loanDetails.loanOfficerName"> {{loanDetails.loanOfficerName}} &nbsp;
               <span *ngIf="loanDetails.loanOfficerName">
                     <!-- <a ng-click="clickEvent('unassignloanofficer', loanDetails.id)" *midasHasPermission = "'REMOVELOANOFFICER_LOAN'"><i
@@ -146,7 +146,7 @@
 
           <ng-container *ngIf="ele.key === 'External Id'">
             <span *ngIf="loanDetails.externalId"> {{loanDetails.externalId}} </span>
-            <span *ngIf="!loanDetails.externalId"> Not Available </span>
+            <span *ngIf="!loanDetails.externalId"> {{'Loans.View.GeneralTab.NotAvailable'| translate }} </span>
           </ng-container>
 
         </td>
@@ -159,38 +159,38 @@
   </div>
 
   <div *ngIf="!loanDetails.summary">
-    <h3> Loan Purpose </h3>
+    <h3> {{'Loans.View.GeneralTab.LoanPurpose'| translate }} </h3>
     <div class="container">
       <div fxLayout="row wrap" fxLayout.lt-md="column">
 
         <div fxFlexFill>
-            <span fxFlex="50%">Loan Purpose:</span>
+            <span fxFlex="50%">{{'Loans.View.GeneralTab.LoanPurpose2'| translate }}</span>
             <span fxFlex="50%" *ngIf="loanDetails.loanPurposeName">
               {{ loanDetails.loanPurposeName }}
             </span>
             <span fxFlex="50%" *ngIf="!loanDetails.loanPurposeName">
-              Not Provided
+              {{'Loans.View.GeneralTab.NotProvided'| translate }}
             </span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="50%">Proposed Amount:</span>
+          <span fxFlex="50%">{{'Loans.View.GeneralTab.proposedPrincipal'| translate }}</span>
           <span fxFlex="50%">{{ loanDetails.proposedPrincipal | number}}</span>
         </div>
 
         <div fxFlexFill *ngIf="showApprovedAmountBasedOnStatus()">
-          <span fxFlex="50%">Approved Amount:</span>
+          <span fxFlex="50%">{{'Loans.View.GeneralTab.approvedPrincipal'| translate }}</span>
           <span fxFlex="50%">{{ loanDetails.approvedPrincipal | number }}</span>
         </div>
 
         <div fxFlexFill *ngIf="showDisbursedAmountBasedOnStatus()">
-          <span fxFlex="50%">Disburse Amount:</span>
+          <span fxFlex="50%">{{'Loans.View.GeneralTab.principal'| translate }}</span>
           <span fxFlex="50%">{{ loanDetails.principal | number }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="50%">Arrears By:</span>
-          <span fxFlex="50%"> Not Provided</span>
+          <span fxFlex="50%">{{'Loans.View.GeneralTab.ArrearsBy'| translate }}</span>
+          <span fxFlex="50%"> {{'Loans.View.GeneralTab.NotProvided'| translate }}</span>
         </div>
 
       </div>
