--- a/src/app/loans/loans-view/loan-account-actions/add-collateral/add-collateral.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/add-collateral/add-collateral.component.html
@@ -9,26 +9,26 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Collateral Type</mat-label>
+            <mat-label>{{'Loans.View.Actions.AddCollateral.collateralTypeId'| translate }}</mat-label>
             <mat-select required formControlName="collateralTypeId">
               <mat-option *ngFor="let collateral of dataObject.allowedCollateralTypes" [value]="collateral.id">
                 {{ collateral.name }}</mat-option>
             </mat-select>
             <mat-error *ngIf="collateralForm.controls.collateralTypeId.hasError('required')">
-              Collateral type <strong>required</strong>
+              {{'Loans.View.Actions.AddCollateral.errcollateralTypeId'| translate }} <strong>{{'Loans.View.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Value</mat-label>
+            <mat-label>{{'Loans.View.Actions.AddCollateral.value'| translate }}</mat-label>
             <input matInput required formControlName="value">
             <mat-error *ngIf="collateralForm.controls.value.hasError('required')">
-              Value is <strong>required</strong>
+              {{'Loans.View.Actions.AddCollateral.errvalue'| translate }}<strong>{{'Loans.View.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Description</mat-label>
+            <mat-label>{{'Loans.View.Actions.AddCollateral.description'| translate }}</mat-label>
             <textarea matInput formControlName="description"></textarea>
           </mat-form-field>
 
@@ -36,9 +36,9 @@
         </div>
 
         <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-          <button type="button" mat-raised-button [routerLink]="['../../general']">Cancel</button>
+          <button type="button" mat-raised-button [routerLink]="['../../general']">{{ "ShareButton.CancelEng" | translate }}</button>
           <button mat-raised-button color="primary" [disabled]="!collateralForm.valid"
-            *midasHasPermission="'CREATE_COLLATERAL'">Submit</button>
+            *midasHasPermission="'CREATE_COLLATERAL'">{{ "ShareButton.Submit" | translate }}</button>
         </mat-card-actions>
 
       </mat-card-content>
