--- a/src/app/loans/loans-view/loan-account-actions/loan-reschedule/loan-reschedule.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/loan-reschedule/loan-reschedule.component.html
@@ -9,49 +9,49 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Reschedule from Installment On</mat-label>
+            <mat-label>{{'Loans.View.Actions.LoanReschedule.rescheduleFromDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="rescheduleDatePicker" required
               formControlName="rescheduleFromDate">
             <mat-datepicker-toggle matSuffix [for]="rescheduleDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #rescheduleDatePicker></mat-datepicker>
             <mat-error *ngIf="rescheduleLoanForm.controls.rescheduleFromDate.hasError('required')">
-              Reschedule Date <strong>is required</strong>
+              {{'Loans.View.Actions.LoanReschedule.errrescheduleFromDate'| translate }}<strong>{{'Loans.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Reason for Rescheduling</mat-label>
+            <mat-label>{{'Loans.View.Actions.LoanReschedule.rescheduleReasonId'| translate }}</mat-label>
             <mat-select formControlName="rescheduleReasonId">
               <mat-option *ngFor="let rescheduleReasonCode of codes" [value]="rescheduleReasonCode.id">
                 {{ rescheduleReasonCode.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="rescheduleLoanForm.controls.rescheduleReasonId.hasError('required')">
-              Reason for Rescheduling <strong>is required</strong>
+              {{'Loans.View.Actions.LoanReschedule.ReasonForRescheduling '| translate }}<strong>{{'Loans.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Submitted On</mat-label>
+            <mat-label>{{'Loans.View.Actions.LoanReschedule.submittedOnDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [matDatepicker]="submittedDatePicker" required
               formControlName="submittedOnDate">
             <mat-datepicker-toggle matSuffix [for]="submittedDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #submittedDatePicker></mat-datepicker>
             <mat-error *ngIf="rescheduleLoanForm.controls.submittedOnDate.hasError('required')">
-              Submitted On Date <strong>is required</strong>
+              {{'Loans.View.Actions.LoanReschedule.errsubmittedOnDate'| translate }}<strong>{{'Loans.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Comments</mat-label>
+            <mat-label>{{'Loans.View.Actions.LoanReschedule.Comments'| translate }}</mat-label>
             <textarea matInput formControlName="rescheduleReasonComment"></textarea>
           </mat-form-field>
 
-          <mat-checkbox [formControl]="changeRepaymentDate"> Change Repayment Date </mat-checkbox>
+          <mat-checkbox [formControl]="changeRepaymentDate"> {{'Loans.View.Actions.LoanReschedule.changeRepaymentDate'| translate }}</mat-checkbox>
 
           <ng-container *ngIf="changeRepaymentDate.value">
             <mat-form-field>
-              <mat-label>Installment Rescheduled to</mat-label>
+              <mat-label>{{'Loans.View.Actions.LoanReschedule.adjustedDueDate'| translate }}</mat-label>
               <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="installmentrescheduledDatePicker"
                 formControlName="adjustedDueDate">
               <mat-datepicker-toggle matSuffix [for]="installmentrescheduledDatePicker"></mat-datepicker-toggle>
@@ -59,33 +59,33 @@
             </mat-form-field>
           </ng-container>
 
-          <mat-checkbox [formControl]="introduceGracePeriods"> Introduce Mid-term grace periods </mat-checkbox>
+          <mat-checkbox [formControl]="introduceGracePeriods"> {{'Loans.View.Actions.LoanReschedule.introduceGracePeriods'| translate }} </mat-checkbox>
 
           <ng-container *ngIf="introduceGracePeriods.value">
             <mat-form-field>
-              <mat-label>Principal Grace Periods </mat-label>
+              <mat-label>{{'Loans.View.Actions.LoanReschedule.graceOnPrincipal'| translate }} </mat-label>
               <input matInput formControlName="graceOnPrincipal">
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Interest Grace Periods </mat-label>
+              <mat-label>{{'Loans.View.Actions.LoanReschedule.graceOnInterest'| translate }} </mat-label>
               <input matInput formControlName="graceOnInterest">
             </mat-form-field>
           </ng-container>
 
-          <mat-checkbox [formControl]="extendRepaymentPeriod"> Extend Repayment Period </mat-checkbox>
+          <mat-checkbox [formControl]="extendRepaymentPeriod"> {{'Loans.View.Actions.LoanReschedule.extendRepaymentPeriod'| translate }} </mat-checkbox>
 
           <ng-container *ngIf="extendRepaymentPeriod.value">
             <mat-form-field>
-              <mat-label>Number Of new Repayments</mat-label>
+              <mat-label>{{'Loans.View.Actions.LoanReschedule.extraTerms'| translate }}</mat-label>
               <input matInput formControlName="extraTerms">
             </mat-form-field>
           </ng-container>
 
-          <mat-checkbox [formControl]="adjustinterestrates"> Adjust interest rates for remainder of loan </mat-checkbox>
+          <mat-checkbox [formControl]="adjustinterestrates"> {{'Loans.View.Actions.LoanReschedule.adjustinterestrates'| translate }} </mat-checkbox>
           <ng-container *ngIf="adjustinterestrates.value">
             <mat-form-field>
-              <mat-label>New Interest Rate</mat-label>
+              <mat-label>{{'Loans.View.Actions.LoanReschedule.newInterestRate'| translate }}</mat-label>
               <input matInput formControlName="newInterestRate">
             </mat-form-field>
           </ng-container>
@@ -93,9 +93,9 @@
         </div>
 
         <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-          <button type="button" mat-raised-button [routerLink]="['../../general']">Cancel</button>
+          <button type="button" mat-raised-button [routerLink]="['../../general']">{{ "ShareButton.CancelEng" | translate }}</button>
           <button mat-raised-button color="primary" [disabled]="!rescheduleLoanForm.valid"
-            *midasHasPermission="'APPROVE_RESCHEDULELOAN'">Submit</button>
+            *midasHasPermission="'APPROVE_RESCHEDULELOAN'">{{ "ShareButton.Submit" | translate }}</button>
         </mat-card-actions>
 
       </mat-card-content>
