--- a/src/app/loans/loans-view/loan-account-actions/prepay-loan/prepay-loan.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/prepay-loan/prepay-loan.component.html
@@ -9,39 +9,39 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Transaction Date</mat-label>
+            <mat-label>{{'Loans.View.Actions.PrepayLoan.transactionDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="transactionDatePicker" required
               formControlName="transactionDate">
             <mat-datepicker-toggle matSuffix [for]="transactionDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #transactionDatePicker></mat-datepicker>
             <mat-error *ngIf="prepayLoanForm.controls.transactionDate.hasError('required')">
-              Transaction Date <strong>is required</strong>
+              {{'Loans.View.Actions.PrepayLoan.errtransactionDate'| translate }}<strong>{{'Loans.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Transaction Amount</mat-label>
+            <mat-label>{{'Loans.View.Actions.PrepayLoan.transactionAmount'| translate }}</mat-label>
             <input matInput currencyMask type="text" required formControlName="transactionAmount">
             <mat-error *ngIf="prepayLoanForm.controls.transactionAmount.hasError('required')">
-              Transaction Amount <strong>is required</strong>
+              {{'Loans.View.Actions.PrepayLoan.errtransactionAmount'| translate }}<strong>{{'Loans.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Principal</mat-label>
+            <mat-label>{{'Loans.View.Actions.PrepayLoan.Principal'| translate }}</mat-label>
             <input matInput formControlName="principal">
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Interest Amount</mat-label>
+            <mat-label>{{'Loans.View.Actions.PrepayLoan.interestAmount'| translate }}</mat-label>
             <input matInput currencyMask type="text" required formControlName="interestAmount">
             <mat-error *ngIf="prepayLoanForm.controls.interestAmount.hasError('required')">
-              Interest Amount <strong>is required</strong>
+              {{'Loans.View.Actions.PrepayLoan.errinterestAmount'| translate }}<strong>{{'Loans.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Payment Type</mat-label>
+            <mat-label>{{'Loans.View.Actions.PrepayLoan.paymentTypeId'| translate }}</mat-label>
             <mat-select formControlName="paymentTypeId">
               <mat-option *ngFor="let paymentType of paymentTypes" [value]="paymentType.id">
                 {{ paymentType.name }}
@@ -50,7 +50,7 @@
           </mat-form-field>
 
           <div fxFlexFill>
-            <span fxFlex="25%">Show Payment Details</span>
+            <span fxFlex="25%">{{'Loans.View.Actions.PrepayLoan.ShowPaymentDetails'| translate }}</span>
             <span fxFlex="75%" class="expandCollapsebutton" (click)="addPaymentDetails()">
               <button mat-raised-button color="primary" *ngIf="showPaymentDetails">
                 <i class="fa fa-minus"></i>
@@ -63,42 +63,42 @@
 
           <ng-container *ngIf="showPaymentDetails">
             <mat-form-field>
-              <mat-label> Account #</mat-label>
+              <mat-label> {{'Loans.View.Actions.PrepayLoan.accountNumber'| translate }}</mat-label>
               <input matInput formControlName="accountNumber">
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Cheque #</mat-label>
+              <mat-label>{{'Loans.View.Actions.PrepayLoan.checkNumber'| translate }}</mat-label>
               <input matInput formControlName="checkNumber">
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Routing Code</mat-label>
+              <mat-label>{{'Loans.View.Actions.PrepayLoan.routingCode'| translate }}</mat-label>
               <input matInput formControlName="routingCode">
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Reciept #</mat-label>
+              <mat-label>{{'Loans.View.Actions.PrepayLoan.receiptNumber'| translate }}</mat-label>
               <input matInput formControlName="receiptNumber">
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Bank #</mat-label>
+              <mat-label>{{'Loans.View.Actions.PrepayLoan.bankNumber'| translate }}</mat-label>
               <input matInput formControlName="bankNumber">
             </mat-form-field>
           </ng-container>
 
           <mat-form-field>
-            <mat-label>Note</mat-label>
+            <mat-label>{{'Loans.View.Actions.PrepayLoan.Note'| translate }}</mat-label>
             <textarea matInput formControlName="note"></textarea>
           </mat-form-field>
 
         </div>
 
         <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-          <button type="button" mat-raised-button [routerLink]="['../../general']">Cancel</button>
+          <button type="button" mat-raised-button [routerLink]="['../../general']">{{ "ShareButton.CancelEng" | translate }}</button>
           <button mat-raised-button color="primary" [disabled]="!prepayLoanForm.valid"
-            *midasHasPermission="'REPAYMENT_LOAN'">Submit</button>
+            *midasHasPermission="'REPAYMENT_LOAN'">{{ "ShareButton.Submit" | translate }}</button>
         </mat-card-actions>
 
       </mat-card-content>
