--- a/src/app/loans/loans-view/loan-account-actions/reject-loan/reject-loan.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/reject-loan/reject-loan.component.html
@@ -9,27 +9,27 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Rejected On</mat-label>
+            <mat-label>{{'Loans.View.Actions.RejectLoan.rejectedOnDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="rejectedDatePicker" required
               formControlName="rejectedOnDate">
             <mat-datepicker-toggle matSuffix [for]="rejectedDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #rejectedDatePicker></mat-datepicker>
             <mat-error *ngIf="rejectLoanForm.controls.rejectedOnDate.hasError('required')">
-              Rejected Date <strong>is required</strong>
+              {{'Loans.View.Actions.RejectLoan.errrejectedOnDate'| translate }}<strong>{{'Loans.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Note</mat-label>
+            <mat-label>{{'Loans.View.Actions.RejectLoan.Note'| translate }}</mat-label>
             <textarea matInput formControlName="note"></textarea>
           </mat-form-field>
 
         </div>
 
         <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-          <button type="button" mat-raised-button [routerLink]="['../../general']">Cancel</button>
+          <button type="button" mat-raised-button [routerLink]="['../../general']">{{ "ShareButton.CancelEng" | translate }}</button>
           <button mat-raised-button color="primary" [disabled]="!rejectLoanForm.valid"
-            *midasHasPermission="'REJECT_LOAN'">Submit</button>
+            *midasHasPermission="'REJECT_LOAN'">{{ "ShareButton.Submit" | translate }}</button>
         </mat-card-actions>
 
       </mat-card-content>
