--- a/src/app/loans/loans-view/loan-account-actions/undo-disbursal/undo-disbursal.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/undo-disbursal/undo-disbursal.component.html
@@ -5,16 +5,16 @@
     <mat-card-content>
 
       <mat-form-field fxFlex>
-        <mat-label>Note</mat-label>
+        <mat-label>{{'Loans.View.Actions.UndoDisbursal.Note'| translate }}</mat-label>
         <textarea matInput [formControl]="note"></textarea>
       </mat-form-field>
 
     </mat-card-content>
 
     <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-      <button type="button" mat-raised-button [routerLink]="['../../general']">Cancel</button>
+      <button type="button" mat-raised-button [routerLink]="['../../general']">{{ "ShareButton.CancelEng" | translate }}</button>
       <button mat-raised-button color="primary" (click)="submit()"
-        *midasHasPermission="'DISBURSALUNDO_LOAN'">Submit</button>
+        *midasHasPermission="'DISBURSALUNDO_LOAN'">{{ "ShareButton.Submit" | translate }}</button>
     </mat-card-actions>
 
   </mat-card>
