--- a/src/app/loans/loans-view/loan-account-actions/view-guarantors/view-guarantors.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/view-guarantors/view-guarantors.component.html
@@ -8,23 +8,23 @@
         <table>
           <tbody>
             <tr>
-              <td>Disbursement Date</td>
+              <td>{{'Loans.View.Actions.ViewGuarantors.DisbursementDate'| translate }}</td>
               <td>{{dataObject.timeline.actualDisbursementDate}}<span
-                  *ngIf="!dataObject.timeline.actualDisbursementDate">Not Available</span></td>
+                  *ngIf="!dataObject.timeline.actualDisbursementDate">{{'Loans.View.Actions.ViewGuarantors.NotAvailable'| translate }}</span></td>
             </tr>
             <tr>
-              <td>Currency</td>
+              <td>{{'Loans.View.Actions.ViewGuarantors.Currency'| translate }}</td>
               <td>{{dataObject.currency.name}}</td>
             </tr>
             <tr>
-              <td>Loan Officer</td>
-              <td>{{dataObject.loanOfficerName}} <span *ngIf="!dataObject.loanOfficerName">Unassigned</span>
+              <td>{{'Loans.View.Actions.ViewGuarantors.Unassigned'| translate }}</td>
+              <td>{{dataObject.loanOfficerName}} <span *ngIf="!dataObject.loanOfficerName"></span>
                 <span *ngIf="dataObject.loanOfficerName">
                   <fa-icon icon="times"></fa-icon>
                 </span></td>
             </tr>
             <tr>
-              <td>External Id</td>
+              <td>{{'Loans.View.Actions.ViewGuarantors.externalId'| translate }}</td>
               <td>{{dataObject.externalId}}</td>
             </tr>
           </tbody>
@@ -35,27 +35,27 @@
         <table>
           <tbody>
             <tr>
-              <td>Loan Purpose</td>
+              <td>{{'Loans.View.Actions.ViewGuarantors.LoanPurpose'| translate }}</td>
               <td>
-                {{dataObject.loanPurposeName}} <span *ngIf="!dataObject.loanPurposeName"> Not Provided </span>
+                {{dataObject.loanPurposeName}} <span *ngIf="!dataObject.loanPurposeName"> {{'Loans.View.Actions.ViewGuarantors.NotProvided'| translate }} </span>
               </td>
             </tr>
             <tr>
-              <td>Approved Amount</td>
+              <td>{{'Loans.View.Actions.ViewGuarantors.approvedPrincipal'| translate }}</td>
               <td>
                 <span>{{dataObject.approvedPrincipal | number}}</span>
               </td>
             </tr>
             <tr>
-              <td>Disburse Amount</td>
+              <td>{{'Loans.View.Actions.ViewGuarantors.principal'| translate }}</td>
               <td>
                 <span>{{dataObject.principal | number}}</span>
               </td>
             </tr>
             <tr>
-              <td>Arrears By</td>
+              <td>{{'Loans.View.Actions.ViewGuarantors.ArrearsBy'| translate }}</td>
               <td>{{dataObject.summary.totalOverdue | number}}
-                <span *ngIf="dataObject.summary.totalOverdue < 0">Not Provided</span>
+                <span *ngIf="dataObject.summary.totalOverdue < 0">{{'Loans.View.Actions.ViewGuarantors.NotProvided'| translate }}</span>
               </td>
             </tr>
           </tbody>
@@ -69,7 +69,7 @@
       <div class="headingContent">
         <div fxLayout="column" fxFlex="50%">
           <div class="headingName">
-            <h3>Guarantors Details</h3>
+            <h3>{{'Loans.View.Actions.ViewGuarantors.GuarantorsDetails'| translate }}</h3>
           </div>
         </div>
         <div fxLayout="column" fxFlex="50%">
@@ -84,7 +84,7 @@
         [dataSource]="guarantorDetails|accountsFilter:'guarantor':showDeletedGuarantorsAccounts">
         <!-- <ng-container *ngIf="expression"> -->
         <ng-container matColumnDef="fullname">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Loans.View.Actions.ViewGuarantors.fullname'| translate }} </th>
           <td mat-cell *matCellDef="let guarantor">
             <span *ngIf="!guarantor.guarantorFundingDetails">
               {{guarantor.firstname}} &nbsp; {{guarantor.lastname}}
@@ -93,7 +93,7 @@
         </ng-container>
 
         <ng-container matColumnDef="relationship">
-          <th mat-header-cell *matHeaderCellDef> Relationship </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Loans.View.Actions.ViewGuarantors.Relationship'| translate }} </th>
           <td mat-cell *matCellDef="let guarantor">
             <span *ngIf="!guarantor.guarantorFundingDetails">
               {{guarantor.clientRelationshipType.name}}
@@ -102,7 +102,7 @@
         </ng-container>
 
         <ng-container matColumnDef="guarantortype">
-          <th mat-header-cell *matHeaderCellDef> Guarantor Type </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Loans.View.Actions.ViewGuarantors.guarantortype'| translate }} </th>
           <td mat-cell *matCellDef="let guarantor">
             <span *ngIf="!guarantor.guarantorFundingDetails">
               {{guarantor.guarantorType.value}}
@@ -111,7 +111,7 @@
         </ng-container>
 
         <ng-container matColumnDef="depositAccount">
-          <th mat-header-cell *matHeaderCellDef> Deposit Account </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Loans.View.Actions.ViewGuarantors.depositAccount'| translate }} </th>
           <td mat-cell *matCellDef="let guarantor">
             <span *ngIf="!guarantor.guarantorFundingDetails">
 
@@ -120,7 +120,7 @@
         </ng-container>
 
         <ng-container matColumnDef="amount">
-          <th mat-header-cell *matHeaderCellDef> Amount </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Loans.View.Actions.ViewGuarantors.Amount'| translate }} </th>
           <td mat-cell *matCellDef="let guarantor">
             <span *ngIf="!guarantor.guarantorFundingDetails">
 
@@ -129,7 +129,7 @@
         </ng-container>
 
         <ng-container matColumnDef="remainingAmount">
-          <th mat-header-cell *matHeaderCellDef> Remaining Amount </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Loans.View.Actions.ViewGuarantors.remainingAmount'| translate }} </th>
           <td mat-cell *matCellDef="let guarantor">
             <span *ngIf="!guarantor.guarantorFundingDetails">
 
@@ -138,21 +138,21 @@
         </ng-container>
 
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef> Status </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Loans.View.Actions.ViewGuarantors.Status'| translate }} </th>
           <td mat-cell *matCellDef="let guarantor">
             <span *ngIf="!guarantor.guarantorFundingDetails">
               <span *ngIf="guarantor.status">
-                Active
+                {{'Loans.View.Actions.ViewGuarantors.Active'| translate }}
               </span>
               <span *ngIf="!guarantor.status">
-                Deleted
+                {{'Loans.View.Actions.ViewGuarantors.Deleted'| translate }}
               </span>
             </span>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Loans.View.Actions.ViewGuarantors.Action'| translate }} </th>
           <td mat-cell *matCellDef="let guarantor; let id = index">
             <span *ngIf="!guarantor.guarantorFundingDetails">
               <button mat-raised-button class="account-action-button" color="primary"
