--- a/src/app/loans/loans-view/loan-account-actions/write-off-page/write-off-page.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/write-off-page/write-off-page.component.html
@@ -9,23 +9,23 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Write off on</mat-label>
+            <mat-label>{{'Loans.View.Actions.WriteOffPage.transactionDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="writeOffDatePicker" required
               formControlName="transactionDate">
             <mat-datepicker-toggle matSuffix [for]="writeOffDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #writeOffDatePicker></mat-datepicker>
             <mat-error *ngIf="writeOffForm.controls.transactionDate.hasError('required')">
-              Write Off Date <strong>is required</strong>
+              {{'Loans.View.Actions.WriteOffPage.errtransactionDate'| translate }}<strong>{{'Loans.strongIsRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Amount</mat-label>
+            <mat-label>{{'Loans.View.Actions.WriteOffPage.Amount'| translate }}</mat-label>
             <input matInput currencyMask type="text" formControlName="amount">
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Note</mat-label>
+            <mat-label>{{'Loans.View.Actions.WriteOffPage.Note'| translate }}</mat-label>
             <textarea matInput formControlName="note"></textarea>
           </mat-form-field>
 
@@ -34,9 +34,9 @@
       </form>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../general']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../../general']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button color="primary" (click)="submit()"
-          *midasHasPermission="'WRITEOFF_LOAN'">Submit</button>
+          *midasHasPermission="'WRITEOFF_LOAN'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </mat-card-content>
