--- a/src/app/loans/loans-view/loan-tranche-details/loan-tranche-details.component.html
+++ b/src/app/loans/loans-view/loan-tranche-details/loan-tranche-details.component.html
@@ -1,19 +1,19 @@
 <div class="container">
 
   <div fxFlexFill>
-    <span fxFlex="40%">Maximum allowed outstanding balance:</span>
+    <span fxFlex="40%">{{'Loans.View.LoanTranche.maxOutstandingLoanBalance'| translate }}</span>
     <span fxFlex="60%">{{ loanDetails.maxOutstandingLoanBalance | number }}</span>
   </div>
 
-  <h3> Loan Tranche Details</h3>
+  <h3> {{'Loans.View.LoanTranche.LoanTrancheDetails'| translate }}</h3>
 
   <div fxLayout="row" fxLayoutAlign="flex-end">
       <button mat-raised-button color="primary" *ngIf="showAddDeleteTrancheButtons('adddisbursedetails')">
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Add
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{'Loans.View.LoanTranche.btnAdd'| translate }}
       </button>
       <span class="delete-button">
         <button mat-raised-button color="warn" (click)="delete()" *ngIf="showAddDeleteTrancheButtons('deletedisbursedetails')">
-          <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;Delete
+          <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;{{'Loans.View.LoanTranche.btnDelete'| translate }}
         </button>
       </span>
   </div>
@@ -21,12 +21,12 @@
   <table mat-table [dataSource]="loanDetails.disbursementDetails" *ngIf="loanDetails.disbursementDetails.length>0">
 
     <ng-container matColumnDef="expected disbursement on">
-      <th mat-header-cell *matHeaderCellDef> Expected Disbursement On </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.LoanTranche.expectedDisbursementDate'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.expectedDisbursementDate | date}} </td>
     </ng-container>
 
     <ng-container matColumnDef="disbursed on">
-      <th mat-header-cell *matHeaderCellDef> Disbursed On </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.LoanTranche.DisbursedOn'| translate }} </th>
       <td mat-cell *matCellDef="let ele">
         <span *ngIf="ele.actualDisbursementDate">
           {{ ele.actualDisbursementDate | date }}
@@ -35,12 +35,12 @@
     </ng-container>
 
     <ng-container matColumnDef="principal">
-      <th mat-header-cell *matHeaderCellDef> Principal </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.LoanTranche.Principal'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.principal }} </td>
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.LoanTranche.Actions'| translate }} </th>
       <td mat-cell *matCellDef="let ele">
         <span *ngIf="ele.actualDisbursementDate">
           <i class="fa fa-check "></i>
@@ -57,24 +57,24 @@
 
   <div *ngIf="loanDetails.emiAmountVariations.length > 0">
 
-    <h3>Installment Amount Variations: </h3>
+    <h3>{{'Loans.View.LoanTranche.InstallmentAmountVariations'| translate }} </h3>
 
     <table mat-table [dataSource]="loanDetails.emiAmountVariations">
 
       <ng-container matColumnDef="emi amount variation from">
-        <th mat-header-cell *matHeaderCellDef> Applicable From Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.LoanTranche.termVariationApplicableFrom'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.termVariationApplicableFrom | date}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="fixed emi amount">
-        <th mat-header-cell *matHeaderCellDef> Installment Amount </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.LoanTranche.termValue'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.termValue }} </td>
       </ng-container>
-  
+
       <tr mat-header-row *matHeaderRowDef="emivariationColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: emivariationColumns;"></tr>
     </table>
   </div>
-  
+
 
 </div>
