--- a/src/app/loans/loans-view/overdue-charges-tab/overdue-charges-tab.component.html
+++ b/src/app/loans/loans-view/overdue-charges-tab/overdue-charges-tab.component.html
@@ -3,22 +3,22 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Loans.View.OverdueCharge.Name'| translate }} </th>
       <td mat-cell *matCellDef="let charge"> {{ charge.name }},{{ charge.currency.displaySymbol }} </td>
     </ng-container>
 
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Loans.View.OverdueCharge.Type'| translate }} </th>
       <td mat-cell *matCellDef="let charge"> {{ charge.chargeCalculationType.value }} </td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Loans.View.OverdueCharge.Amount'| translate }} </th>
       <td mat-cell *matCellDef="let charge"> {{ charge.amount| number }} </td>
     </ng-container>
 
     <ng-container matColumnDef="collectedon">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Collected On </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Loans.View.OverdueCharge.collectedon'| translate }} </th>
       <td mat-cell *matCellDef="let charge"> {{ charge.chargeTimeType.value }} </td>
     </ng-container>
 
