--- a/src/app/loans/loans-view/repayment-schedule-tab/repayment-schedule-tab.component.html
+++ b/src/app/loans/loans-view/repayment-schedule-tab/repayment-schedule-tab.component.html
@@ -9,19 +9,19 @@
     </ng-container>
 
     <ng-container matColumnDef="days">
-      <th mat-header-cell *matHeaderCellDef> Days </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Days'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.daysInPeriod }} </td>
-      <td mat-footer-cell *matFooterCellDef> <b> Total</b> </td>
+      <td mat-footer-cell *matFooterCellDef> <b> {{'Loans.View.RepaymentSchedule.Total'| translate }}</b> </td>
     </ng-container>
 
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Date'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.dueDate | date}} </td>
       <td mat-footer-cell *matFooterCellDef>  </td>
     </ng-container>
 
     <ng-container matColumnDef="paiddate">
-      <th mat-header-cell *matHeaderCellDef> Paid Date </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.paiddate'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.obligationsMetOnDate | date}} </td>
       <td mat-footer-cell *matFooterCellDef>  </td>
     </ng-container>
@@ -29,68 +29,68 @@
     <ng-container matColumnDef="check">
       <th mat-header-cell *matHeaderCellDef> &nbsp; </th>
       <td mat-cell *matCellDef="let ele">
-        <span *ngIf="ele.obligationsMetOnDate"> <i class='fa fa-check'></i> </span> 
+        <span *ngIf="ele.obligationsMetOnDate"> <i class='fa fa-check'></i> </span>
       </td>
       <td mat-footer-cell *matFooterCellDef> </td>
     </ng-container>
 
     <ng-container matColumnDef="principalDue">
-      <th mat-header-cell *matHeaderCellDef> Principal Due </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.principalDue'| translate }} </th>
       <td mat-cell class="check" *matCellDef="let ele"> {{ ele.principalDue | number }} </td>
       <td mat-footer-cell class="check" *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalPrincipalExpected | number }}</b>  </td>
     </ng-container>
 
     <ng-container matColumnDef="balanceOfLoan">
-      <th mat-header-cell *matHeaderCellDef> Balance Of Loan </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.balanceOfLoan'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.principalLoanBalanceOutstanding | number }} </td>
       <td mat-footer-cell *matFooterCellDef> &nbsp; </td>
     </ng-container>
 
     <ng-container matColumnDef="interest">
-      <th mat-header-cell *matHeaderCellDef> Interest </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Interest'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.interestOriginalDue | number}} </td>
       <td mat-footer-cell *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalInterestCharged | number }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="fees">
-      <th mat-header-cell *matHeaderCellDef> Fees </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Fees'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.feeChargesDue | number}} </td>
       <td mat-footer-cell *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalFeeChargesCharged | number }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="penalties">
-      <th mat-header-cell *matHeaderCellDef> Penalties </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Penalties'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.penaltyChargesDue | number}} </td>
       <td mat-footer-cell *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalPenaltyChargesCharged | number }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="due">
-      <th mat-header-cell *matHeaderCellDef> Due </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Due'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.totalDueForPeriod | number}} </td>
       <td mat-footer-cell *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalRepaymentExpected | number }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="paid">
-      <th mat-header-cell *matHeaderCellDef> Paid </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Paid'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.totalPaidForPeriod | number}} </td>
       <td mat-footer-cell *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalRepayment | number }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="inadvance">
-      <th mat-header-cell *matHeaderCellDef> In advance </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.inadvance'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.totalPaidInAdvanceForPeriod | number}} </td>
       <td mat-footer-cell *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalPaidInAdvance | number }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="late">
-      <th mat-header-cell *matHeaderCellDef> Late </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Late'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.totalPaidLateForPeriod | number}} </td>
       <td mat-footer-cell *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalPaidLate | number }} </b> </td>
     </ng-container>
 
     <ng-container *ngIf="isWaived">
       <ng-container matColumnDef="waived">
-        <th mat-header-cell *matHeaderCellDef> Waived </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Waived'| translate }} </th>
         <td mat-cell *matCellDef="let ele"> {{ ele.totalWaivedForPeriod | number}} </td>
         <td mat-footer-cell *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalWaived | number }} </b> </td>
       </ng-container>
@@ -105,7 +105,7 @@
     </ng-container>
 
     <ng-container matColumnDef="outstanding">
-      <th mat-header-cell *matHeaderCellDef> Outstanding </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Loans.View.RepaymentSchedule.Outstanding'| translate }} </th>
       <td mat-cell *matCellDef="let ele"> {{ ele.totalOutstandingForPeriod | number}} </td>
       <td mat-footer-cell *matFooterCellDef> <b> {{ repaymentScheduleDetails.totalOutstanding | number }} </b> </td>
     </ng-container>
@@ -115,15 +115,15 @@
     </ng-container>
 
     <ng-container matColumnDef="header-amount">
-      <th mat-header-cell *matHeaderCellDef [attr.colspan]="2"> Loan Amount and Balance </th>
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="2"> {{'Loans.View.RepaymentSchedule.LoanAmountBalance'| translate }} </th>
     </ng-container>
 
     <ng-container matColumnDef="header-total-cost">
-      <th mat-header-cell *matHeaderCellDef [attr.colspan]="3"> Total Cost of Loan </th>
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="3"> {{'Loans.View.RepaymentSchedule.TotalCostLoan'| translate }} </th>
     </ng-container>
 
     <ng-container matColumnDef="header-installment-totals">
-      <th mat-header-cell *matHeaderCellDef [attr.colspan]="6"> Installment Totals </th>
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="6"> {{'Loans.View.RepaymentSchedule.InstallmentTotals'| translate }} </th>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="['header', 'header-amount', 'header-total-cost', 'header-installment-totals']"></tr>
