--- a/src/app/loans/loans-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/loans/loans-view/transactions-tab/transactions-tab.component.html
@@ -3,42 +3,42 @@
   <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px" class="transaction-buttons" *ngIf="checkStatus()">
     <mat-checkbox [formControl]="hideAccrualsParam" (click)="hideAccruals()" class="accruals">Hide Accruals</mat-checkbox>
     <button mat-raised-button color="primary" [routerLink]="['export']">
-      Export
+      {{'Loans.View.TransactionsTab.btnExport'| translate }}
     </button>
     <button mat-raised-button color="primary">
-      View Journal Entries
+      {{'Loans.View.TransactionsTab.btnViewJournalEntries'| translate }}
     </button>
   </div>
 
   <table mat-table [dataSource]="showTransactionsData">
 
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.TransactionsTab.Date'| translate }} </th>
         <td mat-cell *matCellDef="let transaction" [ngClass]="{'strike': transaction.manuallyReversed}"> {{ transaction.id }} </td>
       </ng-container>
 
       <ng-container matColumnDef="office">
-        <th mat-header-cell *matHeaderCellDef> Office </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.TransactionsTab.Office'| translate }} </th>
         <td mat-cell *matCellDef="let transaction" [ngClass]="{'strike': transaction.manuallyReversed}"> {{ transaction.officeName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionDate">
-        <th mat-header-cell *matHeaderCellDef> Transaction Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.TransactionsTab.transactionDate'| translate }} </th>
         <td mat-cell *matCellDef="let transaction" [ngClass]="{'strike': transaction.manuallyReversed}"> {{ transaction.date | date }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionType">
-        <th mat-header-cell *matHeaderCellDef> Transaction Type </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.TransactionsTab.transactionType'| translate }} </th>
         <td mat-cell *matCellDef="let transaction" [ngClass]="{'strike': transaction.manuallyReversed}"> {{ transaction.type.value  }} </td>
       </ng-container>
 
       <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef> Amount </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.TransactionsTab.Amount'| translate }} </th>
         <td mat-cell *matCellDef="let transaction" [ngClass]="{'strike': transaction.manuallyReversed}"> {{ transaction.amount | number }} </td>
       </ng-container>
 
       <ng-container matColumnDef="principal">
-        <th mat-header-cell *matHeaderCellDef> Breakdown </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.TransactionsTab.Breakdown'| translate }} </th>
         <td mat-cell *matCellDef="let transaction" [ngClass]="{'strike': transaction.manuallyReversed}"> {{ transaction.principalPortion | number }} </td>
       </ng-container>
 
@@ -58,12 +58,12 @@
       </ng-container>
 
       <ng-container matColumnDef="loanBalance">
-        <th mat-header-cell *matHeaderCellDef> Loan Balance </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.TransactionsTab.loanBalance'| translate }} </th>
         <td mat-cell *matCellDef="let transaction" [ngClass]="{'strike': transaction.manuallyReversed}"> {{ transaction.outstandingLoanBalance | number }} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Loans.View.TransactionsTab.Actions'| translate }} </th>
         <td mat-cell *matCellDef="let transaction" [ngClass]="{'strike': transaction.manuallyReversed}">
           <button class="account-action-button" *ngIf="!transaction.manuallyReversed" mat-raised-button color="primary" (click)="routeEdit($event)"
             [routerLink]="[transaction.id, 'reciept']" matTooltip="View Receipts">
@@ -82,19 +82,19 @@
     </ng-container>
 
     <ng-container matColumnDef="header-principal">
-      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1"> Principal </th>
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1"> {{'Loans.View.TransactionsTab.Principal'| translate }} </th>
     </ng-container>
 
     <ng-container matColumnDef="header-interest">
-      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1"> Interest </th>
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1"> {{'Loans.View.TransactionsTab.Interest'| translate }} </th>
     </ng-container>
 
     <ng-container matColumnDef="header-fees">
-      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1"> Fees </th>
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1"> {{'Loans.View.TransactionsTab.Fees'| translate }} </th>
     </ng-container>
 
     <ng-container matColumnDef="header-penalties">
-      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1"> Penalties </th>
+      <th mat-header-cell *matHeaderCellDef [attr.colspan]="1"> {{'Loans.View.TransactionsTab.Penalties'| translate }} </th>
     </ng-container>
 
     <ng-container matColumnDef="header-action">
